--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -155,7 +155,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/sportingGoods"
+        android:id="@+id/sportingGoodsBtn"
         style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="76dp"
         android:layout_height="24dp"
